# cpp_project_sample

./: .gitmodules  CMakeLists.txt  build_deps.bat
executable/: CMakeLists.txt
executable/include/: cpp_project_sample.hpp
executable/lib/: cpp_project_sample.cpp
installers/: sample_lib.bat
lib/: CMakeLists.txt
lib/include/Sample/: Sample.hpp
lib/lib/: Sample.cpp
